Ported to Silverlight.

--- a/Source/MicroModels/MicroModels.Silverlight.csproj
+++ b/Source/MicroModels/MicroModels.Silverlight.csproj
@@ -1,55 +1,52 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{127A9AF7-7D42-473D-92BC-AFFCEA2D1777}</ProjectGuid>
-    <OutputType>library</OutputType>
+    <ProjectGuid>{94E47DEB-678D-4F62-BACC-6BC5D70866C3}</ProjectGuid>
+    <ProjectTypeGuids>{A1591282-1198-4647-A2B1-27E5FF5F6F3B};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MicroModels</RootNamespace>
     <AssemblyName>MicroModels</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <WarningLevel>4</WarningLevel>
+    <SilverlightApplication>false</SilverlightApplication>
+    <ValidateXaml>true</ValidateXaml>
+    <ThrowErrorsInValidation>true</ThrowErrorsInValidation>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <OutputPath>Bin\Silverlight\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;SILVERLIGHT</DefineConstants>
+    <NoStdLib>true</NoStdLib>
+    <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <OutputPath>Bin\Silverlight\Release\</OutputPath>
+    <DefineConstants>TRACE;SILVERLIGHT</DefineConstants>
+    <NoStdLib>true</NoStdLib>
+    <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data" />
+    <Reference Include="System.Windows" />
+    <Reference Include="mscorlib" />
+    <Reference Include="system" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
+    <Reference Include="System.Net" />
+    <Reference Include="System.Windows.Browser" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\DelegateCommand.cs" />
     <Compile Include="Dependencies\Definitions\ExternalDependencyDefinition.cs" />
     <Compile Include="Dependencies\Definitions\StaticDependencyDefinition.cs" />
     <Compile Include="Dependencies\DependencyComparer.cs" />
@@ -78,52 +75,33 @@
     <Compile Include="Dependencies\PathNavigation\Tokens\IToken.cs" />
     <Compile Include="Dependencies\PathNavigation\Tokens\MemberToken.cs" />
     <Compile Include="Dependencies\PropertyReaderFactory.cs" />
+    <Compile Include="Description\DelegatePropertyDescriptor.cs" />
+    <Compile Include="Description\IMicroModel.cs" />
+    <Compile Include="Description\IPropertyDefinition.cs" />
     <Compile Include="Description\ISelfDescribing.cs" />
-    <Compile Include="Expressions\Evaluator.cs" />
+    <Compile Include="Description\PropertyDescriptor.cs" />
+    <Compile Include="Description\ReflectPropertyDescriptor.cs" />
+    <Compile Include="Description\TypeDescriptor.cs" />
     <Compile Include="Expressions\ExpressionVisitor.cs" />
     <Compile Include="Expressions\FuncInvoker.cs" />
     <Compile Include="Expressions\SafeExpressionEvaluator.cs" />
     <Compile Include="Expressions\Statement.cs" />
     <Compile Include="Extensions\IModelExtension.cs" />
-    <Compile Include="Commands\DelegateCommand.cs" />
-    <Compile Include="Description\DelegatePropertyDescriptor.cs" />
-    <Compile Include="MicroModel.cs" />
-    <Compile Include="Description\IMicroModel.cs" />
-    <Compile Include="Description\IPropertyDefinition.cs" />
     <Compile Include="Extensions\TypeValidationExtensionAttribute.cs" />
+    <Compile Include="MicroModel.cs" />
     <Compile Include="MicroModelBase.cs" />
+    <Compile Include="MicroModelBase.Silverlight.cs" />
     <Compile Include="MicroModelExtensions.cs" />
-    <Compile Include="Description\ModelTypeDescriptionProvider.cs" />
-    <Compile Include="Description\ModelTypeDescriptor.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
+    <Compile Include="MicroModelObject.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyDefinitionExtensions.cs" />
+    <Compile Include="Expressions\Evaluator.cs" />
     <Compile Include="Utilities\Guard.cs" />
     <Compile Include="Utilities\LambdaExtensions.cs" />
-    <Compile Include="Properties\VersionInfo.cs" />
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <Compile Include="MicroModelBase.Desktop.cs" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <AppDesigner Include="Properties\" />
+    <Compile Include="Utilities\MicroModelObjectBuilder.cs" />
+    <Compile Include="Utilities\TypeSignature.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\v3.0\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -131,4 +109,11 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ProjectExtensions>
+    <VisualStudio>
+      <FlavorProperties GUID="{A1591282-1198-4647-A2B1-27E5FF5F6F3B}">
+        <SilverlightProjectProperties />
+      </FlavorProperties>
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
